# coldsignal-web

./: .env.example  .env.local.example  .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  pnpm-lock.yaml
agent/: DISTRIBUTION.md  LISTING.md  Makefile  OBSERVABILITY.md  README.md  RELEASE.md  SECURITY.md  pyproject.toml
agent/docker/: Dockerfile  docker-compose.yml  filter  proxy.conf
agent/evals/: README.md  baseline.json  run.py
agent/evals/scenarios/: canned-pagerduty.json
agent/evals/scenarios/001-redis-eviction-storm/: alert.json  ground_truth.json
agent/evals/scenarios/002-jwt-clock-skew/: alert.json  ground_truth.json
agent/evals/scenarios/003-thin-signal-needs-human/: alert.json  ground_truth.json
agent/evals/scenarios/004-db-connection-pool-exhaustion/: alert.json  ground_truth.json
agent/evals/scenarios/005-rollout-bad-config/: alert.json  ground_truth.json
agent/evals/scenarios/006-disk-full-logs-not-rotating/: alert.json  ground_truth.json
agent/evals/scenarios/007-third-party-api-rate-limit/: alert.json  ground_truth.json
agent/evals/scenarios/008-feature-flag-bad-default/: alert.json  ground_truth.json
agent/evals/scenarios/009-cert-expired/: alert.json  ground_truth.json
agent/scripts/: audit.sh  build-sbom.sh  release.sh
agent/tests/: test_alert_adapters.py  test_slack_blocks.py  test_webhook_signature.py
agent/triagepack/: __init__.py  alert.py  config.py  observability.py  reasoning.py  slack.py  webhook.py
agent/triagepack/mcp/: __init__.py  github.py  logs.py  runbook.py
app/: globals.css  layout.tsx  page.tsx
(+137 files in other folders)
