[project]
name = "triagepack"
version = "0.1.0-dev"
description = "Audited Claude agent that triages PagerDuty alerts, pulls context via MCP, and posts a proposed RCA to Slack."
requires-python = ">=3.12"
authors = [{ name = "Packforge / triagepack team" }]
license = { text = "Proprietary" }

# Pinned versions — every change here goes through SECURITY.md audit.
dependencies = [
  "anthropic==0.39.0",
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "httpx==0.28.1",
  "pydantic==2.10.4",
  "slack-sdk==3.34.0",
  "opentelemetry-api==1.28.2",
  "opentelemetry-sdk==1.28.2",
  "opentelemetry-exporter-otlp==1.28.2",
  "mcp==1.1.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "ruff==0.8.4",
  "pip-audit==2.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["triagepack"]
